# Zaku

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: README.md  tpch.rs
cli/: main.rs
resources/: test.csv
src/: error.rs  execute.rs  lib.rs  main.rs  test_utils.rs
src/datasources/: datasink.rs  datasource.rs  mod.rs  prettifier.rs
src/datatypes/: column_vector.rs  mod.rs  prettifier.rs  record_batch.rs  schema.rs  types.rs
src/frontend/: mod.rs  prettifier.rs  ui.rs
src/logical_plans/: aggregate_expr.rs  binary_expr.rs  dataframe.rs  logical_expr.rs  logical_plan.rs  mod.rs
src/physical_plans/: accumulator.rs  binary_expr.rs  mod.rs  physical_expr.rs  physical_plan.rs
src/sql/: mod.rs  operators.rs  parser.rs  stmt.rs
tests/: test_query.rs
