[package]
name = "zaku"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
name="zaku"
path="src/lib.rs"

[dependencies]
argparse = "0.2.2"
bigdecimal = "0.4.2"
chrono = "0.4.31"
csv = "1.3.0"
dateparser = "0.2.1"
enum_dispatch = "0.3.12"
futures-async-stream = "0.2.9"
sqlparser = "0.39.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

[[bin]]
name = "cli"
path = "cli/main.rs"
