[package]
name = "zaku"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
name="zaku"
path="src/lib.rs"

[dependencies]
argparse = "0.2.2"
bigdecimal = "0.4.2"
chrono = "0.4.31"
crossterm = "0.27.0"
csv = "1.3.0"
enum_dispatch = "0.3.12"
futures-async-stream = "0.2.9"
rustyline = "12.0.0"
sqlparser = "0.39.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "cli"
path = "cli/main.rs"

[[bench]]
name = "tpch"
harness = false

[[test]]
name = "test_query"
bench = false
